--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project Tic Tact Toe</title>
+  <noscript>
+    This page cannot work without JavaScript!
+  </noscript>
+  <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
-  
+  <main>
+    <header>
+      Tic Tac Toe!
+    </header>
+    <div id="display"> </div>
+    <script src="./app.js" charset="utf-8"></script>
+  </main>
+  <footer>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</footer>
+
 </body>
+
+
 </html>
