--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
     <header>
       Tic Tac Toe!
     </header>
-    <div id="display"> </div>
+    <div id="display">
+      <div id="screen"> texto de prueba </div>
+      <div id="boardContainer"> </div>
+    </div>
+
     <script src="./app.js" charset="utf-8"></script>
   </main>
-  <footer>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</footer>
+  <footer>
+    <button id="restartButton" type="button" name="button">Restart</button>
+  </footer>
 
 </body>
 
