code cleanup & style fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <noscript>
     This page cannot work without JavaScript!
   </noscript>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
